# simple-library

./: CMakeLists.txt  simple-library-test.cpp  simple-library.cpp  simple-library.h
meta-seneca/recipes-apps/: sensor-dash.bb
meta-seneca/recipes-apps/my-program/: CMakeLists.txt  main.cpp  my-program_0.1.bb
meta-seneca/recipes-core/images/: seneca-image.bb
meta-seneca/recipes-graphics/gtkmm3/: gtkmm3_%.bbappend
meta-seneca/recipes-support/input-app/: input-app.bb
meta-seneca/recipes-support/input-app/files/: input_app.c
simple-library/src/: CMakeCache.txt  file_creator.cpp
simple-library/src/include/: file_creator.hpp
